//proto版本
syntax = "proto3";
//生成c#代码的命名空间
option csharp_namespace = "TestGrpcNetCoreService";

//最终的服务名称  =包名+服务
//客户端调用服务端，根据服务名来查找，所以所有的包名要一致
//包名
package my_package;

//定义服务
// The greeting service definition.
service Greeter {
  //一元方法
  rpc SayHello (HelloRequest) returns (HelloReply);

    //空对象
  rpc EmptyHello(EmptyHelloRequest) returns (Empty);

  //服务器流式处理方法-文件下载
  rpc StreamingFromServer(ExampleRequest) returns (stream ExampleResponse);

	//客户端流式处理方法-文件上传
  rpc StreamingFromClient(stream ExampleRequest) returns (ExampleResponse);

  //双向流式处理方法
  rpc StreamingBothWays(stream ExampleRequest) returns (stream ExampleResponse);


    //服务器流式处理方法-文件下载
  rpc DwonloadFile(ExampleRequest) returns (stream ExampleResponse);

	//客户端流式处理方法-文件上传
  rpc UploadFile(stream ExampleRequest) returns (ExampleResponse);
}

// The request message containing the user's name.
message HelloRequest {
string name = 1;
}

// The response message containing the greetings.
message HelloReply {
string message = 1;
}

message EmptyHelloRequest{
int32 id=1;
//字典
map<string, string> attributes = 2;
//对象
People people=3;
//集合
repeated People peoples=4;
}

message People{
string name =1;
int32 age=2;
}

message Empty{

}

message ExampleRequest{
int32 pageIndex=1;
int32 pageSize=2;
bool isDescending=3;
}
message ExampleResponse{
string name=1;
string sex=2;
}